# alphaengine

./: .env.example  .gitignore  ALPHA_ENGINE_BUILD_PLAN.md  ALPHA_ENGINE_TECHNICAL_SPEC.md  ARCHITECTURE.md  CHANGELOG_BUILD.md  CLAUDE.md  PHASE2_PLAN.md  REPO_MAP.md  docker-compose.yml  railway.toml
backend/: Dockerfile  Procfile  auth.py  config.py  main.py  requirements.txt
backend/agents/: base_agent.py  cio_synthesizer.py  citations.py  desk3_position_risk.py  desk5_decision_gate.py  mandate_gate.py  orchestrator.py  portfolio_strategist.py  query_interpreter.py  research_analyst.py  risk_manager.py  scanner.py  schemas.py  scorer.py  stream_callbacks.py  universe.py
backend/data/: alpha_vantage_client.py  events.py  firecrawl_client.py  fred_client.py  market_client.py  market_screener.py  massive_client.py  news_client.py  price_tape.py  screens.py  sec_client.py  sector_map.py  smart_money.py
backend/db/: database.py  models.py  repositories.py
backend/exports/: __init__.py  charts.py  pdf_renderer.py  styles.py
backend/infra/: __init__.py  async_utils.py  cache.py  citations_resolver.py  coverage.py  demo_limits.py  eod_snapshot.py  http.py  lineage.py  logging_ctx.py  status_store.py  (+4 more)
frontend/: Dockerfile  middleware.ts  package-lock.json  package.json  proxy.ts
mcp-server/: .env.example  Dockerfile  PLAN.md  README.md  api.py  app.py  jobs.py  pytest.ini  requirements.txt  server.py  telemetry.py
mcp-server/sdk/: README.md  pyproject.toml
mcp-server/sdk/alphaengine/: __init__.py
mcp-server/sdk/examples/: first_signal.py
scripts/: smoke.ps1
(+155 files in other folders)
